--- a/scratch.html
+++ b/scratch.html
@@ -15,14 +15,19 @@
     <div class="common mainbody">
             <h3>What is Liberty?</h3>
             Many have a general idea of what liberty is, and many cherish it. 
-            However, what such people often do not know is <br> the precise definition: 
+            However, what such people often do not know is the precise definition: 
             what liberty <span class="italic">really</span> means.
-            <p>The first definition of liberty given by Oxford Dictionary is as follows: <br>
-                the state of being free within society from oppressive restrictions imposed by authority on one's way of life, behavior, or political views.</p>
+            <p>The first definition of liberty given by Oxford Dictionary is as follows:
+                <ul>
+                    <li>The state of being free within society from oppressive restrictions imposed by authority on one's way of life, behavior, or political views.</li>
+                </ul>
+            </p>
             Put in more simple terms, one could succinctly say that liberty is the absence of coercion.
             <p>Thomas Jefferson, in the Declaration of Independence, wrote:
-                "We hold these truths to be self-evident, that all men are created equal, <br>
-                that they are endowed by their Creator with certain unalienable rights, that among these are life, liberty, and the pursuit of happiness."
+                <ul>
+                    <li>"We hold these truths to be self-evident, that all men are created equal, that they are endowed by their Creator with certain unalienable rights, <br> 
+                        that among these are <span class="italic">life</span>, <span class="italic">liberty</span>, and <span class="italic">the pursuit of happiness</span>."</li>
+                </ul>
             </p>
             These are only a few “among” the rights with which God has blessed us. Here’s what each means.
             <ol>
@@ -52,7 +57,8 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/MAOR77sUS88?si=eeTL6J27IH2Gws5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <p>&nbsp;</p>
-        Additionally, here is an interactive map featuring data put forward by the Cato Institute's Human Freedom Index from around 2016. <br> Liberty is for the whole world.
+        Additionally, here is an interactive map featuring data put forward by the Cato Institute's Human Freedom Index from around 2016. <br> 
+        After all, liberty is for the whole world.
         <br><br>
 
         <div class='tableauPlaceholder' id='viz1745335434697' style='position: relative'><noscript><a href='#'><img alt='Dashboard Desktop ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BR&#47;BRWB5HMPG&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;BRWB5HMPG' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BR&#47;BRWB5HMPG&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1745335434697');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.minWidth='420px';vizElement.style.maxWidth='860px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='747px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
